prqlc/prqlc/tests/integration/snapshots/integration__queries__debug_lineage__cast.snap
---
source: prqlc/prqlc/tests/integration/queries.rs
expression: "# mssql:test\nfrom tracks\nsort {-bytes}\nselect {\n    name,\n    bin = ((album_id | as REAL) * 99)\n}\ntake 20\n"
input_file: prqlc/prqlc/tests/integration/queries/cast.prql
---
frames:
- - 1:25-38
  - columns:
    - !All
      input_id: 131
      except: []
    inputs:
    - id: 131
      name: tracks
      table:
      - default_db
      - tracks
- - 1:39-97
  - columns:
    - !Single
      name:
      - tracks
      - name
      target_id: 138
      target_name: null
    - !Single
      name:
      - bin
      target_id: 139
      target_name: null
    inputs:
    - id: 131
      name: tracks
      table:
      - default_db
      - tracks
- - 1:98-105
  - columns:
    - !Single
      name:
      - tracks
      - name
      target_id: 138
      target_name: null
    - !Single
      name:
      - bin
      target_id: 139
      target_name: null
    inputs:
    - id: 131
      name: tracks
      table:
      - default_db
      - tracks
nodes:
- id: 131
  kind: Ident
  span: 1:13-24
  ident: !Ident
  - default_db
  - tracks
  parent: 137
- id: 135
  kind: Ident
  span: 1:32-37
  ident: !Ident
  - this
  - tracks
  - bytes
  targets:
  - 131
  parent: 137
- id: 137
  kind: 'TransformCall: Sort'
  span: 1:25-38
  children:
  - 131
  - 135
  parent: 147
- id: 138
  kind: Ident
  span: 1:52-56
  ident: !Ident
  - this
  - tracks
  - name
  targets:
  - 131
  parent: 146
- id: 139
  kind: RqOperator
  span: 1:68-95
  alias: bin
  targets:
  - 141
  - 145
  parent: 146
- id: 141
  kind: RqOperator
  span: 1:81-88
  targets:
  - 144
- id: 144
  kind: Ident
  span: 1:70-78
  ident: !Ident
  - this
  - tracks
  - album_id
  targets:
  - 131
- id: 145
  kind: Literal
  span: 1:92-94
- id: 146
  kind: Tuple
  span: 1:46-97
  children:
  - 138
  - 139
  parent: 147
- id: 147
  kind: 'TransformCall: Select'
  span: 1:39-97
  children:
  - 137
  - 146
  parent: 149
- id: 149
  kind: 'TransformCall: Take'
  span: 1:98-105
  children:
  - 147
  - 150
- id: 150
  kind: Literal
  parent: 149
ast:
  name: Project
  stmts:
  - VarDef:
      kind: Main
      name: main
      value:
        Pipeline:
          exprs:
          - FuncCall:
              name:
                Ident:
                - from
                span: 1:13-17
              args:
              - Ident:
                - tracks
                span: 1:18-24
            span: 1:13-24
          - FuncCall:
              name:
                Ident:
                - sort
                span: 1:25-29
              args:
              - Tuple:
                - Unary:
                    op: Neg
                    expr:
                      Ident:
                      - bytes
                      span: 1:32-37
                  span: 1:31-37
                span: 1:30-38
            span: 1:25-38
          - FuncCall:
              name:
                Ident:
                - select
                span: 1:39-45
              args:
              - Tuple:
                - Ident:
                  - name
                  span: 1:52-56
                - Binary:
                    left:
                      Pipeline:
                        exprs:
                        - Ident:
                          - album_id
                          span: 1:70-78
                        - FuncCall:
                            name:
                              Ident:
                              - as
                              span: 1:81-83
                            args:
                            - Ident:
                              - REAL
                              span: 1:84-88
                          span: 1:81-88
                      span: 1:70-88
                    op: Mul
                    right:
                      Literal:
                        Integer: 99
                      span: 1:92-94
                  span: 1:68-95
                  alias: bin
                span: 1:46-97
            span: 1:39-97
          - FuncCall:
              name:
                Ident:
                - take
                span: 1:98-102
              args:
              - Literal:
                  Integer: 20
                span: 1:103-105
            span: 1:98-105
        span: 1:13-105
    span: 1:0-105
