prqlc/prqlc/tests/integration/snapshots/integration__queries__debug_lineage__constants_only.snap
---
source: prqlc/prqlc/tests/integration/queries.rs
expression: "from genres\ntake 10\nfilter true\ntake 20\nfilter true\nselect d = 10\n"
input_file: prqlc/prqlc/tests/integration/queries/constants_only.prql
---
frames:
- - 1:12-19
  - columns:
    - !All
      input_id: 137
      except: []
    inputs:
    - id: 137
      name: genres
      table:
      - default_db
      - genres
- - 1:20-31
  - columns:
    - !All
      input_id: 137
      except: []
    inputs:
    - id: 137
      name: genres
      table:
      - default_db
      - genres
- - 1:32-39
  - columns:
    - !All
      input_id: 137
      except: []
    inputs:
    - id: 137
      name: genres
      table:
      - default_db
      - genres
- - 1:40-51
  - columns:
    - !All
      input_id: 137
      except: []
    inputs:
    - id: 137
      name: genres
      table:
      - default_db
      - genres
- - 1:52-65
  - columns:
    - !Single
      name:
      - d
      target_id: 149
      target_name: null
    inputs:
    - id: 137
      name: genres
      table:
      - default_db
      - genres
nodes:
- id: 137
  kind: Ident
  span: 1:0-11
  ident: !Ident
  - default_db
  - genres
  parent: 140
- id: 140
  kind: 'TransformCall: Take'
  span: 1:12-19
  children:
  - 137
  - 141
  parent: 143
- id: 141
  kind: Literal
  parent: 140
- id: 142
  kind: Literal
  span: 1:27-31
  parent: 143
- id: 143
  kind: 'TransformCall: Filter'
  span: 1:20-31
  children:
  - 140
  - 142
  parent: 145
- id: 145
  kind: 'TransformCall: Take'
  span: 1:32-39
  children:
  - 143
  - 146
  parent: 148
- id: 146
  kind: Literal
  parent: 145
- id: 147
  kind: Literal
  span: 1:47-51
  parent: 148
- id: 148
  kind: 'TransformCall: Filter'
  span: 1:40-51
  children:
  - 145
  - 147
  parent: 151
- id: 149
  kind: Literal
  span: 1:63-65
  alias: d
  parent: 150
- id: 150
  kind: Tuple
  span: 1:63-65
  children:
  - 149
  parent: 151
- id: 151
  kind: 'TransformCall: Select'
  span: 1:52-65
  children:
  - 148
  - 150
ast:
  name: Project
  stmts:
  - VarDef:
      kind: Main
      name: main
      value:
        Pipeline:
          exprs:
          - FuncCall:
              name:
                Ident:
                - from
                span: 1:0-4
              args:
              - Ident:
                - genres
                span: 1:5-11
            span: 1:0-11
          - FuncCall:
              name:
                Ident:
                - take
                span: 1:12-16
              args:
              - Literal:
                  Integer: 10
                span: 1:17-19
            span: 1:12-19
          - FuncCall:
              name:
                Ident:
                - filter
                span: 1:20-26
              args:
              - Literal:
                  Boolean: true
                span: 1:27-31
            span: 1:20-31
          - FuncCall:
              name:
                Ident:
                - take
                span: 1:32-36
              args:
              - Literal:
                  Integer: 20
                span: 1:37-39
            span: 1:32-39
          - FuncCall:
              name:
                Ident:
                - filter
                span: 1:40-46
              args:
              - Literal:
                  Boolean: true
                span: 1:47-51
            span: 1:40-51
          - FuncCall:
              name:
                Ident:
                - select
                span: 1:52-58
              args:
              - Literal:
                  Integer: 10
                span: 1:63-65
                alias: d
            span: 1:52-65
        span: 1:0-65
    span: 1:0-65
